# aibot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  README_TASK.md  celery_worker.py  docker-compose.yml  fixtures.py  pyproject.toml
app/: config.py  main.py  tasks.py  utils.py
app/ai/: generator.py  openai_client.py
app/api/: endpoints.py  schemas.py
app/database/: __init__.py  db.py  models.py  types.py
app/news_parser/: sites.py
app/telegram/: auth.py  bot.py  publisher.py
