[project]
name = "aibot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.22.0",
    "bs4>=0.0.2",
    "fastapi>=0.125.0",
    "openai>=2.13.0",
    "pydantic-settings>=2.12.0",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.45",
    "telethon>=1.42.0",
    "uuid>=1.30",
    "uvicorn>=0.38.0",
]
